--- a/scss/_contacto.scss
+++ b/scss/_contacto.scss
@@ -2,6 +2,7 @@
     margin-top: 96.34px;
     h1{
         @extend .tittle-general;
+        @include efectup(0px,35px,0px,0px);
       }
 }
 .contact-form {
