--- a/CSS/main.css
+++ b/CSS/main.css
@@ -11,7 +11,7 @@ body {
   background-attachment: fixed;
 }
 
-.tittle-general, .error-404-container h1, .contact-form-main h1, .sucursales h1, .container-serco h1, .service-conteiner h1 {
+.tittle-general, .error-404-container h1, .contact-form-main h1, .sucursales h1, .container-serco h1, .service-conteiner h1, .main-reco h3 {
   margin-top: 96.34px;
   background-image: linear-gradient(180deg, rgba(39, 39, 39, 0.95), rgba(233, 86, 7, 0.85));
   text-align: center;
@@ -209,7 +209,6 @@ body {
   margin-top: 30px;
   margin-bottom: 30px;
   color: rgb(8, 8, 8);
-  font-size: 30px;
   font-weight: bold;
   padding: 55px;
   position: relative;
@@ -265,12 +264,12 @@ body {
 
 .main-text-description {
   color: rgba(39, 39, 39, 0.93);
-  margin-top: 30px;
+  margin-top: 40px;
   margin-bottom: 30px;
   font-size: 25px;
   font-weight: bold;
-  text-align: center;
-  padding: 15px;
+  text-align: start;
+  padding: 25px;
   position: relative;
   --mask:
       radial-gradient(35px at 35px 35px,#0000 calc(98% - 5px),#000 calc(100% - 5px) 98%,#0000) -35px -35px,
@@ -286,22 +285,14 @@ body {
   mask: var(--mask);
 }
 
-.main-reco h2 {
-  text-align: start;
-  background-color: rgba(39, 39, 39, 0.3);
-  backdrop-filter: blur(5px);
-  -webkit-backdrop-filter: blur(5px);
-  color: rgb(250, 250, 250);
-  padding: 15px;
-  font-size: 35px;
-  text-shadow: 0 0 10px rgba(0, 0, 0, 0.8);
+.main-reco h3 {
   clip-path: polygon(0 0, 100% 0, 100% calc(100% - 50px), 50% 100%, 0 calc(100% - 50px));
-  padding-top: 0px;
-  padding-bottom: 50px;
+  padding-top: 10px;
+  padding-bottom: 40px;
   padding-left: 0px;
   padding-right: 0px;
-  padding-left: 20px;
-  box-shadow: 10px 10px 20px black;
+  font-size: 25px;
+  margin-top: 30px;
 }
 .main-reco .img-opinion {
   display: flex;
@@ -368,38 +359,16 @@ body {
     display: block;
     margin: 10px 0 0 15px;
   }
-  .main-container {
-    margin: 10px;
-  }
-  .main-container h2 {
-    font-size: 25px;
-    display: flex;
-    justify-content: center;
-    margin: 5px;
-  }
-  .main-container h3 {
-    font-size: 20px;
-    display: flex;
-    justify-content: center;
-    margin: 10px;
-  }
   .main-btn a {
     justify-content: space-evenly;
     margin: 20px 10px 0 10px;
     font-size: 15px;
   }
   .main-text-description {
-    margin-top: 10px;
-    padding: 20px;
+    margin-top: 30px;
     font-size: 20px;
   }
-  .main-reco h2 {
-    text-align: start;
-    background-color: rgba(74, 74, 74, 0.5);
-    color: rgb(250, 250, 250);
-    padding: 15px;
-    font-size: 25px;
-    text-shadow: 0 0 10px rgba(0, 0, 0, 0.8);
+  .main-reco h3 {
     padding-bottom: 50px;
   }
   .main-reco img {
