--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -6,7 +6,6 @@
     margin-top: 30px;
     margin-bottom: 30px;  
     color: $color-text-black;
-    font-size: 30px;
     font-weight: $text-weight-bold;
     span{
         display: block;
@@ -25,7 +24,7 @@
     background-position: center;
     backdrop-filter: blur(5px);
     -webkit-backdrop-filter: blur(5px);
-    background-size:cover;
+    background-size: cover;
     background-position: center;
     border-radius: 13px;
     div{
@@ -43,33 +42,26 @@
             justify-content: center;
             color: $color-principal;
             text-shadow: 0 0 8px $color-text-black;
-            margin: 10%
+            margin: 10%;
         }
     }
 }
 
 .main-text-description{
     color: $color-footer-background;
-    margin-top: 30px;
+    margin-top: 40px;
     margin-bottom: 30px;
     font-size: 25px;
     font-weight: $text-weight-bold;
-    text-align: center;
-    @include background-tittle-secundary(15px);
+    text-align: start;
+    @include background-tittle-secundary(25px);
 }
 .main-reco{
-    h2{
-        text-align: start;
-        background-color: rgba(39, 39, 39, 0.3);
-        backdrop-filter: blur(5px);
-        -webkit-backdrop-filter: blur(5px);
-        color: $color-text-white;
-        padding: 15px;
-        font-size: 35px;
-        text-shadow: $text-shadow-black;
-        @include efectup(0px,50px,0px,0px);
-        padding-left: 20px;
-        box-shadow: 10px 10px 20px black;
+    h3{
+        @extend .tittle-general;
+        @include efectup(10px,40px,0px,0px);
+        font-size: 25px;
+        margin-top: 30px;
     }
     .img-opinion {
         display: flex;
@@ -77,7 +69,6 @@
         align-items: center;
         margin: 15px;
     }
-
 }
  //button 
 
@@ -145,39 +136,17 @@
             margin: 10px 0 0 15px;
         }
     }
-    .main-container{
-        margin: 10px;
-        h2{
-            font-size: 25px;
-            display: flex;
-            justify-content: center;
-            margin: 5px;
-        }
-        h3{
-            font-size: 20px;
-            display: flex;
-            justify-content: center;
-            margin: 10px;
-        }
-    }
     .main-btn a{
         justify-content: space-evenly;
         margin: 20px 10px 0 10px;
         font-size: 15px;
     } 
     .main-text-description{
-        margin-top: 10px;
-        padding: 20px;
+        margin-top: 30px;
         font-size: 20px;
     }
     .main-reco{
-        h2{
-            text-align: start;
-            background-color: rgba(74, 74, 74, 0.5); 
-            color: $color-text-white;
-            padding: 15px;
-            font-size: 25px;
-            text-shadow: $text-shadow-black;
+        h3{
             padding-bottom: 50px;
         }
         img{
